deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tree01guru
spec:
  selector:
    app: tree01guru
  type: NodePort
  ports:
  - port: 8080
